# teach-chess

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: appstore.yml  build.yml  ci.yml  content-validation.yml
.playtest/steps/: 00-onboarding.mjs  10-new-game.mjs  20-move.mjs  30-coaching.mjs  40-review.mjs  50-puzzle.mjs  90-housekeeping.mjs  _helpers.mjs
crates/mentor-llm/: Cargo.toml
crates/mentor-llm/src/: download.rs  error.rs  lib.rs  model.rs  prompts.rs  stream.rs  types.rs
docs/: ARCHITECTURE.md  PLAYTESTING.md  RELEASE.md
docs/plans/: mcp-playtest.md  position-aware-coaching.md
docs/reviews/: 2026-07-12-e2e-review.md
docs/superpowers/plans/: 2026-04-05-design-critique-implementation.md
docs/superpowers/specs/: 2026-04-05-design-critique-fixes.md
scripts/: build-appstore.sh  fetch-model.sh  fetch-stockfish.sh  playtest-driver.mjs  validate-content.py
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  Entitlements.mas.plist  Entitlements.plist  Info.appstore.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: openings_starter.json  puzzles_starter.csv
src-tauri/entitlements/: ChessMentor.entitlements  Stockfish.entitlements
src-tauri/migrations/: 001_initial.sql  002_coaching_text.sql  003_coaching_cache.sql  004_problems.sql  005_repertoire.sql  006_assessment.sql  007_opponent_personality.sql  008_fsrs.sql
src-tauri/src/: error.rs  lib.rs  main.rs  srs.rs
src-tauri/src/assessment/: adaptive.rs  glicko2.rs  mod.rs  rank.rs
src-tauri/src/coaching/: mod.rs  templates.rs
src-tauri/src/commands/: assessment.rs  coaching.rs  dashboard.rs  engine.rs  game.rs  heuristics.rs  llm.rs  mod.rs  opponent.rs  player.rs  puzzle.rs  repertoire.rs  review.rs  theme.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: assessment.rs  coaching_cache.rs  connection.rs  game.rs  migration_tests.rs  mod.rs  player.rs  puzzle.rs  repertoire.rs  srs.rs
src-tauri/src/engine/: eval.rs  mod.rs  process.rs  uci.rs
src-tauri/src/game/: mod.rs  moves.rs  state.rs
src-tauri/src/heuristics/: activity.rs  king_safety.rs  material.rs  mod.rs  pawns.rs  phase.rs  tactics.rs
src-tauri/src/llm/: cache.rs  candle_backend.rs  channel.rs  coach_prompt.rs  llm_support.rs  mod.rs  model_manager.rs  player_level.rs  position_facts.rs  prompts.rs
src-tauri/src/models/: assessment.rs  chess.rs  engine.rs  game.rs  heuristics.rs  mod.rs  player.rs  puzzle.rs  repertoire.rs
src-tauri/src/opponent/: mod.rs  personality.rs  selector.rs  teaching.rs
src-tauri/src/puzzle/: importer.rs  mod.rs  session.rs  srs.rs
src-tauri/src/repertoire/: importer.rs  mod.rs  session.rs
src-tauri/tests/: llm_position_grounding.rs  stockfish_integration.rs
src-tauri/tests/fixtures/: coaching_eval.json
src/lib/api/: bindings.ts  commands.ts  events.ts
src/lib/components/assessment/: SkillProfilePanel.svelte
src/lib/components/board/: Chessboard.svelte  EvalBar.svelte  MoveList.svelte
src/lib/components/board/__mocks__/: Chessboard.svelte
src/lib/components/dashboard/: AdaptivePromptDialog.svelte  Dashboard.svelte  Dashboard.test.ts  ModelDownloadCard.svelte  RecommendationCard.svelte  SkillRadarChart.svelte  StreakBanner.svelte
src/lib/components/game/: GameConfig.svelte  GameConfig.test.ts  GameOverDialog.svelte  GameSummaryCard.svelte  InGameCoachingPanel.svelte  PlayScreen.svelte
src/lib/components/history/: GameCard.svelte  GameHistory.svelte
src/lib/components/layout/: ErrorToast.svelte  Header.svelte  Sidebar.svelte
src/lib/components/openings/: DrillPanel.svelte  DrillScreen.svelte  OpeningDetail.svelte  OpeningLibrary.svelte  OpeningsScreen.svelte  RepertoireView.svelte
src/lib/components/problems/: ProblemPanel.svelte  ProblemScreen.svelte  ProblemScreen.test.ts  PuzzleFilter.svelte  PuzzleHintSystem.svelte  PuzzleSolution.svelte
src/lib/components/problems/__mocks__/: ProblemPanel.svelte
src/lib/components/review/: CoachingPanel.svelte  MoveAnnotation.svelte  PatternSummaryPanel.svelte  ReviewScreen.svelte
src/lib/components/settings/: ModelManager.svelte  SettingsPage.svelte  ThemeSwitcher.svelte
src/lib/components/ui/: Button.svelte  KeyboardShortcutsDialog.svelte  LoadingSpinner.svelte
src/lib/dev/: playtest.ts
src/lib/stores/: assessment.svelte.ts  engine.svelte.ts  error.svelte.ts  game.svelte.ts  navHistory.svelte.ts  navHistory.test.ts  player.svelte.ts  puzzle.svelte.ts  repertoire.svelte.ts  theme.svelte.ts
src/lib/types/: assessment.ts  chess.ts  dashboard.ts  engine.ts  game.ts  puzzle.ts  repertoire.ts  theme.ts
src/lib/utils/: format.test.ts  format.ts  gameSummary.test.ts  gameSummary.ts  puzzleRating.test.ts  puzzleRating.ts  reviewStats.test.ts  reviewStats.ts
src/styles/: board-themes.css  fonts.css  grid-surface.css  study-surfaces.css  tokens.css
src/test/: setup.ts
tests/e2e/: board-interaction.spec.ts  new-game.spec.ts
