[workspace]
members = ["crates/mentor-llm", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
authors = ["Joel Lewis"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
