[package]
name = "chess-mentor"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lib]
name = "chess_mentor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
shakmaty = "0.27"
rusqlite = { version = "0.38", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"

# System info (sandbox-compatible memory detection)
sysinfo = "0.33"

# LLM coaching (llama.cpp via the mentor-llm crate; the crate's heavy
# dependencies only compile when its `llm` feature is enabled below)
mentor-llm = { path = "../crates/mentor-llm" }

[dev-dependencies]
tempfile = "3"

[features]
default = ["llm"]
llm = ["mentor-llm/llm"]
llm-cuda = ["llm", "mentor-llm/llm-cuda"]
llm-metal = ["llm", "mentor-llm/llm-metal"]
