[package]
name = "chess-mentor"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lib]
name = "chess_mentor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
shakmaty = "0.27"
rusqlite = { version = "0.38", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4", "serde"] }
rs-fsrs = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"

# System info (sandbox-compatible memory detection)
sysinfo = "0.33"

# LLM coaching (shared sensei-llm runtime; llama.cpp / hf-hub only compile
# when the app's `llm` feature is enabled below). Metal is automatic on
# macOS via sensei-llm's target-specific llama-cpp-2 dependency.
sensei-llm = { git = "https://github.com/JoelLewis/sensei-kit", rev = "ae29011c9328cff46eb9a0c8866731066c13782f", default-features = false }

# Dev-only agent-driving socket server; NEVER in default features — release
# builds (App Store included) must not ship the unauthenticated socket.
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp", rev = "49fbecb2dcfac7f5739a79ae22bcf9452dd8d228", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["llm"] # unchanged — mcp is opt-in (`pnpm playtest`)
mcp = ["dep:tauri-plugin-mcp"]
llm = ["sensei-llm/llm", "sensei-llm/download"]
llm-cuda = ["llm", "sensei-llm/cuda"]
llm-metal = ["llm", "sensei-llm/metal"]
