[package]
name = "mentor-llm"
description = "Local LLM coaching for ChessMentor via llama.cpp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
llama-cpp-2 = { version = "0.1.151", optional = true, features = [
    "sampler",
    "common",
] }
hf-hub = { version = "0.5", optional = true }
encoding_rs = { version = "0.8", optional = true }
sha2 = { version = "0.10", optional = true }

# macOS builds always get Metal-accelerated inference compiled in (features
# unify with the base llama-cpp-2 dependency above; no CLI flags needed).
[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1.151", optional = true, features = [
    "sampler",
    "common",
    "metal",
] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
llm = ["dep:llama-cpp-2", "dep:hf-hub", "dep:encoding_rs", "dep:sha2"]
llm-cuda = ["llm", "llama-cpp-2/cuda"]
llm-metal = ["llm", "llama-cpp-2/metal"]
